// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextEditorActions > renders 1`] = `
<body>
  <div>
    <div
      class="_actions_e669ba"
    >
      <div
        class="_emoji_picker_wrapper_e669ba"
      >
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="emoji-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              sentiment_satisfied
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="bold-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_bold
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="italic-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_italic
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="code-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            code
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="strike-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_strikethrough
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <span
        class="_counter_e669ba"
      >
        0
         / 
        100
      </span>
    </div>
  </div>
</body>
`;

exports[`TextEditorActions > should close emoji picker on click outside 1`] = `
<body>
  <div>
    <div
      class="_actions_e669ba"
    >
      <div
        class="_emoji_picker_wrapper_e669ba"
      >
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="emoji-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              sentiment_satisfied
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          class="_emoji_picker_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <div
              class="emoji-picker"
              data-testid="emoji-picker"
              data-v-67fb0974=""
            >
              <em-emoji-picker />
            </div>
          </div>
        </div>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="bold-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_bold
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="italic-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_italic
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="code-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            code
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="strike-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_strikethrough
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <span
        class="_counter_e669ba"
      >
        0
         / 
        100
      </span>
    </div>
  </div>
</body>
`;

exports[`TextEditorActions > should close emoji picker on click outside 2`] = `
<body>
  <div>
    <div
      class="_actions_e669ba"
    >
      <div
        class="_emoji_picker_wrapper_e669ba"
      >
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="emoji-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              sentiment_satisfied
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="bold-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_bold
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="italic-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_italic
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="code-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            code
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="strike-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_strikethrough
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <span
        class="_counter_e669ba"
      >
        0
         / 
        100
      </span>
    </div>
  </div>
</body>
`;

exports[`TextEditorActions > should toggle emoji picker 1`] = `
<body>
  <div>
    <div
      class="_actions_e669ba"
    >
      <div
        class="_emoji_picker_wrapper_e669ba"
      >
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="emoji-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              sentiment_satisfied
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="bold-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_bold
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="italic-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_italic
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="code-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            code
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="strike-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_strikethrough
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <span
        class="_counter_e669ba"
      >
        0
         / 
        100
      </span>
    </div>
  </div>
</body>
`;

exports[`TextEditorActions > should toggle emoji picker 2`] = `
<body>
  <div>
    <div
      class="_actions_e669ba"
    >
      <div
        class="_emoji_picker_wrapper_e669ba"
      >
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="emoji-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              sentiment_satisfied
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          class="_emoji_picker_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <div
              class="emoji-picker"
              data-testid="emoji-picker"
              data-v-67fb0974=""
            >
              <em-emoji-picker />
            </div>
          </div>
        </div>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="bold-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_bold
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="italic-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_italic
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="code-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            code
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <button
          class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
          data-testid="strike-button"
          data-v-4cec5e43=""
        >
          <!---->
          <!---->
          <span
            class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
            data-v-4cec5e43=""
            data-v-930380cc=""
          >
            format_strikethrough
          </span>
          <span
            class="unnnic-button__label"
            data-v-4cec5e43=""
          >
            
            
             
          </span>
          <!---->
        </button>
      </div>
      <span
        class="_counter_e669ba"
      >
        0
         / 
        100
      </span>
    </div>
  </div>
</body>
`;
